<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondob"
    android:padding="16dp"
    tools:context=".MaininformationActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Texto de instrucciones -->
        <TextView
            android:id="@+id/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fillthefileds"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp"
                android:background="@color/white">

                <!-- Título de la pantalla -->
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enteryourdetails"
                    android:textAlignment="center"
                    android:textColor="#0B0A0A"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <!-- Campos de entrada -->
                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/age"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/editGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/gender"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/editWeight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/weight"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/editHeight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/height"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/editInfertility"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/infertility"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/editFamilyHistory"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/Familyhistoryofdysmenorrhea"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/editAgeAtMenarche"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/ageatmenarche"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/editNulliparity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_play_arrow_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/Nulliparity"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background" />

                <!-- Botón de continuar -->
                <Button
                    android:id="@+id/btnContinue4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#D7A8A8"
                    android:text="@string/CONTINUE"
                    android:textSize="20sp"
                    app:cornerRadius="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
