<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoa"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <!-- Ajusta este valor a tu preferencia -->

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true" />






    <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#B95B5A"
                android:drawableLeft="@drawable/login"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="20sp"
                app:cornerRadius="20dp"

                />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_account"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true" />


            <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#B95B5A"
                        android:text="@string/register"
                        android:drawableLeft="@drawable/register"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="90dp" />


</LinearLayout>



